--- a/contact.html
+++ b/contact.html
@@ -55,53 +55,59 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
         </div>
     </header>
 
-    <section id="hero-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="block wow fadeInUp" data-wow-delay=".3s">
 
-                        <!-- Slider -->
-                        <section class="cd-intro">
-                            <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
-                                <span>HI, MY NAME IS CHAD & I AM A</span><br>
-                                <span class="cd-words-wrapper">
-                                    <b class="is-visible">DESIGNER</b>
-                                   
-                                </span>
-                                </h1>
-                        </section>
-                        <!-- cd-intro -->
-                        <!-- /.slider -->
-                        <h2 class="wow fadeInUp animated" data-wow-delay=".6s">
-                                    With 10 years experience, I've occupied many roles including digital design director,<br> web designer and developer. This site showcases some of my work.
-                                </h2>
-                        <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works"
-                        data-section="#works">View Works</a>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--/#main-slider-->
 
  <main class="container" id="mainContent">
         <section>
             <div class="container">
                 <div class="section-heading">
-                        <h1 id="aboutTitle"></h1>
+                        <h1 id="contact">c</h1>
                 </div>
-
 
             <div class="row">
                  <div class="col-sm-6 text-center">
                      <br/>
-                     <p id="aboutParagraph"></p>
+                     <br/>
+                     <form class="form-horizontal" role="form" method="post" action="index.php">
+    <div class="form-group">
+        <label for="name" class="col-sm-2 control-label">Name</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="email" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+            <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="message" class="col-sm-2 control-label">Message</label>
+        <div class="col-sm-10">
+            <textarea class="form-control" rows="4" name="message"></textarea>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="human" name="human" placeholder="Your Answer">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-2">
+            <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-2">
+            <! Will be used to display an alert to the user>
+        </div>
+    </div>
+</form>
                  </div>
             
               <div class="col-sm-6 text-center">
-                     <img  src="Content/css/images/bio_pic.png" height="350px">
+                     <div id="googleMap" style="width:500px;height:380px;"></div>
                  </div>   
              </div>   
 
