--- a/projects.html
+++ b/projects.html
@@ -90,14 +90,14 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
         <section>
             <div class="container">
                 <div class="section-heading">
-                        <h1 id="aboutTitle"></h1>
+                        <h1>About Me</h1>
                 </div>
 
 
             <div class="row">
                  <div class="col-sm-6 text-center">
                      <br/>
-                     <p id="aboutParagraph"></p>
+                     <p id="firstParagraph"></p>
                  </div>
             
               <div class="col-sm-6 text-center">
