--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,11 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     <!-- CSS Section -->
     <link rel="stylesheet" href="Content/css/bootstrap.min.css">
     <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
+     <!--ion icons -->
+  <link rel="stylesheet" href="Content/css/ionicons.min.css">
+    <!--font awesome-->
     <link rel="stylesheet" href="Content/css/font-awesome.min.css">
+    <!--custom css -->
     <link rel="stylesheet" href="Content/app.css">
 
 
@@ -19,78 +23,40 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
 </head>
 
 <body>
+ <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
 
-    <header id="top-bar" class="navbar-fixed-top animated-header">
-        <div class="container">
-            <div class="navbar-header">
-                <!-- responsive nav button -->
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- /responsive nav button -->
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="projects.html">Projects</a></li>
+         <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
-                <!-- logo -->
-                <div class="navbar-brand">
-                    <a href="index.html">
-                        <i class="fa fa-camera-retro fa-lg"></i>
-                    </a>
-                </div>
-                <!-- /logo -->
-            </div>
-            <!-- main menu -->
-            <nav class="collapse navbar-collapse navbar-right" role="navigation">
-                <div class="main-menu">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+<header>
 
-                    </ul>
-                </div>
-            </nav>
-            <!-- /main nav -->
-        </div>
-    </header>
-
-    <section id="hero-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="block wow fadeInUp" data-wow-delay=".3s">
-
-                        <!-- Slider -->
-                        <section class="cd-intro">
-                            <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
-                                <span>HI, MY NAME IS CHAD & I AM A</span><br>
-                                <span class="cd-words-wrapper">
-                                    <b class="is-visible">DESIGNER</b>
-                                   
-                                </span>
-                                </h1>
-                        </section>
-                        <!-- cd-intro -->
-                        <!-- /.slider -->
-                        <h2 class="wow fadeInUp animated" data-wow-delay=".6s">
-                                    With 10 years experience, I've occupied many roles including digital design director,<br> web designer and developer. This site showcases some of my work.
-                                </h2>
-                        <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works"
-                        data-section="#works">View Works</a>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--/#main-slider-->
+</header>
+    
 
  <main class="container" id="mainContent">
         <section>
             <div class="container">
                 <div class="section-heading">
-                        <h1>About Me</h1>
+                        <h1 id="projectTitle">Projects</h1>
                 </div>
 
 
@@ -108,6 +74,49 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
           </div> <!-- end of container --> 
         </section>
  </main>
+  
+   <!--
+            ==================================================
+            Footer Section Start
+            ================================================== -->
+            <footer id="footer">
+                <div class="container">
+                    <div class="col-md-8">
+                        <p class="copyright">Copyright: <span>2015</span> . Design and Developed by <small>Chad Clarke</small></p>
+                    </div>
+                    <div class="col-md-4">
+                        <!-- Social Media -->
+                        <ul class="social">
+                            <li>
+                                <a href="http://wwww.fb.com/themefisher" class="Facebook">
+                                    <i class="ion-social-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://wwww.twitter.com/themefisher" class="Twitter">
+                                    <i class="ion-social-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="Linkedin">
+                                    <i class="ion-social-linkedin"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://wwww.fb.com/themefisher" class="Google Plus">
+                                    <i class="ion-social-googleplus"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </footer> <!-- /#footer -->
+   
+  
+  
+  
+  
+  
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
     <script src="Scripts/lib/bootstrap.min.js"></script>
