--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                  </div>
             
               <div class="col-sm-6 text-center">
-                     <img  src="Content/css/images/bio_pic.png" height="350px">
+                     <img  src="Content/css/images/family.svg" height="450px">
                  </div>   
              </div>   
 
@@ -89,12 +89,12 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                         <!-- Social Media -->
                         <ul class="social">
                             <li>
-                                <a href="http://wwww.fb.com/themefisher" class="Facebook">
+                                <a href="#" class="Facebook">
                                     <i class="ion-social-facebook"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="http://wwww.twitter.com/themefisher" class="Twitter">
+                                <a href="#" class="Twitter">
                                     <i class="ion-social-twitter"></i>
                                 </a>
                             </li>
@@ -104,7 +104,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                                 </a>
                             </li>
                             <li>
-                                <a href="http://wwww.fb.com/themefisher" class="Google Plus">
+                                <a href="#" class="Google Plus">
                                     <i class="ion-social-googleplus"></i>
                                 </a>
                             </li>
