final update before submission

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Brand</a>
+
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#skils">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#portfolio">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -59,11 +59,12 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     </nav>
 
     <header id="top" class="header">
+        <a id="logo" class="navbar-brand" href="#"><img src="Content/css/img/logo.svg" height="500px"></a>
         <div id="intro" class="text-center">
-            <h1 id="iam">I AM CHAD CLARKE </h1>
-            <h3><span>D</span>esigner, <span>D</span>eveloper, <span>D</span>reamer </h3>
+            <h1 id="iam"> </h1>
+            <h3 id="ActionText"><span>D</span>esigner, <span>D</span>eveloper, <span>D</span>reamer </h3>
             <br>
-            <button type="button" class="btn btn-info">Success</button>
+            <button href="#top" type="button" class="btn btn-info">Learn More</button>
         </div>
     </header>
 
@@ -75,9 +76,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                 <div class="row text-center">
                     <div class="col-lg-10 col-lg-offset-1">
                         <h1 id="aboutTitle"></h1>
-
-
-
+                        <hr>
                         <div class="row">
                             <div class="col-sm-6 text-center">
                                 <br/>
@@ -85,7 +84,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                             </div>
 
                             <div class="col-sm-6 text-center">
-                                <img src="Content/css/img/family.svg" height="450px">
+                                <img id="family" src="Content/css/img/family.svg" height="450px">
                             </div>
                         </div>
                     </div>
@@ -100,6 +99,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                 <div class="row text-center">
                     <div class="col-lg-10 col-lg-offset-1">
                         <h1 id="skillsTitle"></h1>
+                        <hr>
                         <div class="row">
                             <!--html5-->
                             <div class="col-lg-4 text-center">
@@ -126,59 +126,61 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
         </section>
 
         <!-- Page Header -->
-        <div class="row text-center">
-            <div class="col-lg-10 col-lg-offset-1">
-                <h1 id="portfolioTitle"></h1>
+        <section id="portfolio">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h1 id="portfolioTitle"></h1>
+                    <hr>
+                </div>
             </div>
-        </div>
-        <!-- /.row -->
+            <!-- /.row -->
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <div class="row text-center">
-                    <h3 id="projectOne"></h3>
-                    <p class="lipsum"></p>
+            <!-- Projects Row -->
+            <div class="row">
+                <div class="col-md-6 portfolio-item">
+                    <a href="#">
+                        <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    </a>
+                    <div class="row text-center">
+                        <h3 id="projectOne"></h3>
+                        <p class="lipsum"></p>
+                    </div>
+                </div>
+                <div class="col-md-6 portfolio-item">
+                    <a href="#">
+                        <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    </a>
+                    <div class="row text-center">
+                        <h3 id="projectTwo"></h3>
+                        <p class="lipsum"></p>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <div class="row text-center">
-                    <h3 id="projectTwo"></h3>
-                    <p class="lipsum"></p>
-                </div>
-            </div>
-        </div>
-        <!-- /.row -->
+            <!-- /.row -->
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <div class="row text-center">
-                    <h3 id="projectThree"></h3>
-                    <p class="lipsum">hahahahah</p>
+            <!-- Projects Row -->
+            <div class="row">
+                <div class="col-md-6 portfolio-item">
+                    <a href="#">
+                        <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    </a>
+                    <div class="row text-center">
+                        <h3 id="projectThree"></h3>
+                        <p class="lipsum"></p>
+                    </div>
+                </div>
+                <div class="col-md-6 portfolio-item">
+                    <a href="#">
+                        <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    </a>
+                    <div class="row text-center">
+                        <h3 id="projectFour"></h3>
+                        <pclass="lipsum">
+                            </p>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <div class="row text-center">
-                    <h3 id="projectFour"></h3>
-                    <pclass="lipsum">
-                        </p>
-                </div>
-            </div>
-        </div>
-        <!-- /.row -->
+            <!-- /.row -->
         </section>
 
         <!--like what you see section-->
@@ -186,9 +188,9 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
 
     <section id="callToAction">
         <div class="row">
-            <div  id="callToActionText" class="col-lg-12 text-center">
+            <div id="callToActionText" class="col-lg-12 text-center">
                 <h1 id="likeWhatYouSee"></h1>
-                <button type="button" class="btn btn-info">Success</button>
+                <button type="button" class="btn btn-info">Learn More</button>
             </div>
         </div>
     </section>
@@ -223,7 +225,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                         <label for="comment">Comment:</label>
                         <textarea class="form-control" rows="5" id="comment"></textarea>
                     </div>
-                    <button type="button" class="btn btn-success">Success</button>
+                    <button href="#top" type="button" class="btn btn-info">Success</button>
 
                 </div>
             </div>
@@ -265,19 +267,28 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
             </div>
         </div>
     </footer>
-    <!-- /#footer -->
-
-
-
-
-
-
-
-
+    <!-- footer -->
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
     <script src="Scripts/lib/bootstrap.min.js"></script>
     <script src="Scripts/app.js"></script>
 </body>
+       
+       <!--Jquery Smooth Scroll -->
+        <script>
+            $(document).ready(function(){
+	$('a[href^="#"]').on('click',function (e) {
+	    e.preventDefault();
 
+	    var target = this.hash;
+	    var $target = $(target);
+
+	    $('html, body').stop().animate({
+	        'scrollTop': $target.offset().top
+	    }, 900, 'swing', function () {
+	        window.location.hash = target;
+	    });
+	});
+});
+         </script>
 </html>
