--- a/index.html
+++ b/index.html
@@ -206,33 +206,29 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
             </div>
 
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <div class="form-group">
-                        <label for="usr">Name:</label>
-                        <input type="text" class="form-control" id="usr">
-                    </div>
-                    <div class="form-group">
-                        <label for="pwd">Password:</label>
-                        <input type="password" class="form-control" id="Email">
-                    </div>
+                <div class="col-lg-12 text-center">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name:</label>
+                            <input type="text" id="name"/>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="emal">Email:</label>
-                        <input type="email" class="form-control" id="pwd">
-                    </div>
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="text" id="email"/>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="comment">Comment:</label>
-                        <textarea class="form-control" rows="5" id="comment"></textarea>
-                    </div>
-                    <button href="#top" type="button" class="btn btn-info">Success</button>
+                        <div class="form-group">
+                            <label for="comment">Comment:</label>
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                        </div>
 
+                        <button href="#top" type="button" id="Button" class="btn btn-info">Success</button>
+                    </form> 
                 </div>
             </div>
         </div>
     </section>
-
-
 
     <!--footer-->
     <footer id="footer">
@@ -273,10 +269,32 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     <script src="Scripts/lib/bootstrap.min.js"></script>
     <script src="Scripts/app.js"></script>
 </body>
-       
-       <!--Jquery Smooth Scroll -->
-        <script>
-            $(document).ready(function(){
+
+<!--console log form inputs-->
+<script>
+    var button = document.getElementById("Button");
+    //on click consol log the inputs 
+    button.onclick = function() {
+        var name =  button.form.name.value;
+        var email =  button.form.email.value;
+        var comment =  button.form.comment.value;
+            
+            console.log(name + email + comment);
+    }
+</script>
+
+
+
+
+
+
+
+
+
+
+<!--Jquery Smooth Scroll -->
+<script>
+    $(document).ready(function(){
 	$('a[href^="#"]').on('click',function (e) {
 	    e.preventDefault();
 
@@ -290,5 +308,6 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
 	    });
 	});
 });
-         </script>
+</script>
+
 </html>
