--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
 </body>
 
 <!--console log form inputs-->
-<script>
+<!--<script>
     var button = document.getElementById("Button");
     //on click consol log the inputs 
     button.onclick = function() {
@@ -281,16 +281,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
             
             console.log(name + email + comment);
     }
-</script>
-
-
-
-
-
-
-
-
-
+</script>-->
 
 <!--Jquery Smooth Scroll -->
 <script>
