--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
         </section>
 
 
+
+ <section class="row">
+            <h2>First Section</h2>
+            <p id="paragraph1"  class="col-md-12"></p>
+</section>
+
+
+
+
+
+
         <!--skills section-->
         <section id="skills">
             <div class="container">
