--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
     <script src="Scripts/lib/bootstrap.min.js"></script>
-    <script src="Scripts/app.js"></script>
+    <!--<script src="Scripts/app.js"></script>-->
+    <script src="Scripts/projects.js"></script>
 </body>
 
 <!--console log form inputs-->
@@ -293,6 +294,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
             console.log(name + email + comment);
     }
 </script>-->
+
 
 <!--Jquery Smooth Scroll -->
 <script>
